# hopsan

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Common.prf  HOPSANGROUP  Hopsan-release-notes.txt  HopsanNG.pro  HopsanNG_remote.pro  HopsanReleaseInnoSetupScript.iss  HopsanReleaseProcess.md  README.md  addgitsubmodules.sh  build-instructions.md  buildDevDocumentation.bat  buildDocumentation.bat  buildDocumentation.sh  buildUserDocumentation.bat  getGitInfo.bat  getGitInfo.sh  getSvnRevision.bat  getSvnRevision.sh  helpers.cmake  hopsan-default-configuration.xml  hopsandefaults  licenseHeader  licenseHeaderALv2  licenseHeaderGPL3  licenseHeaderGPLv3  licenseNoticeALv2  licenseNoticeGPLv3  makeDebRelease.sh  makeMacRelease.sh  makeReleaseWin32.py  makeSnapRelease.sh  makeWindowsRelease.py  runUnitTests.bat  (+6 more)
HopsanCLI/: BuildUtilities.cpp  BuildUtilities.h  CMakeLists.txt  CliUtilities.cpp  CliUtilities.h  HopsanCLI.pro  ModelUtilities.cpp  ModelUtilities.h  ModelValidation.cpp  ModelValidation.h  cliFunctions.cpp  cliFunctions.h  core_cli.cpp  core_cli.h  main.cpp  version_cli.h
HopsanCLI/Dependencies/: tclap-README.txt
HopsanCore/: CMakeLists.txt  HopsanCore.pro  HopsanCoreBuild.prf
HopsanCore/dependencies/: indexingcsvparser.cmake  libnumhop.cmake  rapidxml.cmake  sundials.cmake
HopsanCore/include/: Component.h  ComponentEssentials.h  ComponentSystem.h  ComponentUtilities.h  HString.h  HVector.hpp  HopsanCore.h  HopsanCoreGitVersion.h  HopsanCoreMacros.h  HopsanCoreSVNRevision.h  HopsanCoreVersion.h  HopsanEssentials.h  HopsanTypes.h  Model.h  Node.h  NodeRWHelpfuncs.hpp  Nodes.h  Parameters.h  Port.h  Quantities.h  compiler_info.h  version.h  win32dll.h
HopsanCore/src/: Component.cc  Component.cpp  ComponentSystem.cc  ComponentSystem.cpp  HString.cpp  HopsanEssentials.cc  HopsanEssentials.cpp  HopsanTypes.cc  HopsanTypes.cpp  Model.cc  Node.cc  Node.cpp  Nodes.cc  Nodes.cpp  Parameters.cc  Parameters.cpp  Port.cc  Port.cpp  Quantities.cc  Quantities.cpp
HopsanGUI/: AnimatedConnector.cpp  AnimatedConnector.h  BuiltinTests.cpp  BuiltinTests.h  CMakeLists.txt  CachableDataVector.cpp  CachableDataVector.h  Configuration.cpp  Configuration.h  CopyStack.cpp  CopyStack.h  CoreAccess.cpp  CoreAccess.h  DesktopHandler.cpp  DesktopHandler.h  GUIConnector.cpp  GUIConnector.h  GUIConnectorAppearance.cpp  GUIConnectorAppearance.h  GUIPort.cpp  GUIPort.h  GUIPortAppearance.cpp  GUIPortAppearance.h  GeneratorUtils.cpp  GeneratorUtils.h  GraphicsView.cpp  GraphicsView.h  GraphicsViewPort.h  HOPSANGUI.rc  HcomHandler.cpp  HcomHandler.h  HcomTest.hpp  HopsanGUI.desktop  HopsanGUI.pro  HopsanGuiBuild.prf  InitializationThread.cpp  InitializationThread.h  LibraryHandler.cpp  LibraryHandler.h  LogDataGeneration.cpp  (+52 more)
HopsanGUI/Dependencies/: PythonQt2.1_Qt4.8_winMinGW44.patch  qwt-6.1.0.patch  unpackPatchAndBuildPythonQt.bat  unpackPatchAndBuildPythonQt.sh  unpackPatchAndBuildQwt.bat  unpackPatchAndBuildQwt.sh
HopsanGUI/Dialogs/: AboutDialog.cpp  AboutDialog.h  AnimatedIconPropertiesDialog.cpp  AnimatedIconPropertiesDialog.h  ComponentPropertiesDialog.cpp  ComponentPropertiesDialog.h  ComponentPropertiesDialog3.cpp  ComponentPropertiesDialog3.h  ContainerPortPropertiesDialog.cpp  ContainerPortPropertiesDialog.h  ContainerPropertiesDialog.cpp  ContainerPropertiesDialog.h  EditComponentDialog.cpp  EditComponentDialog.h  HelpDialog.cpp  HelpDialog.h  LicenseDialog.cpp  LicenseDialog.h  ModelObjectPropertiesDialog.cpp  ModelObjectPropertiesDialog.h  MovePortsDialog.cpp  MovePortsDialog.h  NumHopScriptDialog.cpp  NumHopScriptDialog.h  OptimizationDialog.cpp  OptimizationDialog.h  OptimizationScriptWizard.cpp  OptimizationScriptWizard.h  OptionsDialog.cpp  OptionsDialog.h  ParameterSettingsLayout.cpp  ParameterSettingsLayout.h  SensitivityAnalysisDialog.cpp  SensitivityAnalysisDialog.h
HopsanGUI/GUIObjects/: AnimatedComponent.cpp  AnimatedComponent.h  GUIComponent.cpp  GUIComponent.h  GUIContainerObject.cpp  GUIContainerObject.h  GUIContainerPort.cpp  GUIContainerPort.h  GUIGroup.cpp  GUIGroup.h  GUIModelObject.cpp  GUIModelObject.h  GUIModelObjectAppearance.cpp  GUIModelObjectAppearance.h  GUIObject.cpp  GUIObject.h  GUISystem.cpp  GUISystem.h  GUIWidgets.cpp  GUIWidgets.h
HopsanGUI/Optimization/: OptimizationWorker.cpp  OptimizationWorker.h  OptimizationWorkerComplex.cpp  OptimizationWorkerComplex.h  OptimizationWorkerComplexRF.cpp  OptimizationWorkerComplexRF.h  OptimizationWorkerComplexRFM.cpp  OptimizationWorkerComplexRFM.h  OptimizationWorkerComplexRFP.cpp  OptimizationWorkerComplexRFP.h  OptimizationWorkerParameterSweep.cpp  (+5 more)
HopsanGenerator/: CMakeLists.txt  HopsanGenerator.pro  HopsanGeneratorBuild.prf  templates.qrc
Ops/: CMakeLists.txt  Ops.pro
SymHop/: CMakeLists.txt  SymHop.pro
UnitTests/: CMakeLists.txt  UnitTests.pro
componentLibraries/: CMakeLists.txt  componentLibraries.pro
doc/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_alias  Doxyfile_full  aliasDoxyfile  copyGraphics.ps1  devBuildHopsan.dox  devBuildHopsanDependenciesManuallyPage.dox  devCodingConventions.dox  devDoxyfile  devHopsanDependencies.dox  devHowToBuildDocumentation.dox  devSetupBuildEnvironment.dox  devSubversionAutoProps.dox  devWritingCustomComponents.dox  mainPage.dox  userAnimation.dox  userCustomComponents.dox  userDoxyfile  userEnergyLosses.dox  userFrequencyAnalysis.dox  userGettingStarted.dox  userHCOMScripting.dox  userHopsanCLI.dox  userModelExport.dox  userModelingInHopsan.dox  userNumHopScripting.dox  userOptimization.dox  userPythonScripting.dox  userScripting.dox  userSensitivityAnalysis.dox  userSetupLibraryDevelopmentEnvironment.dox  userTransmissionLineElementMethod.dox
hopsanc/: CMakeLists.txt  hopsanc.pro
hopsandcp/: CMakeLists.txt  dcpmaster.cpp  dcpmaster.h  dcpslave.cpp  dcpslave.h  hopsandcp.pro  main.cpp  utilities.h
hopsangeneratorgui/: CMakeLists.txt  hopsangeneratorgui.pro
hopsanhdf5exporter/: CMakeLists.txt  hopsanhdf5exporter.cpp  hopsanhdf5exporter.h  hopsanhdf5exporter.pro  hopsanhdf5exporter_dummy.cpp
(+5479 files in other folders)
